added GC log params